force-app/main/default/objects/leaseworks__Project__c/leaseworks__Project__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>