force-app/main/default/objects/leaseworks__Project__c/fields/leaseworks__Bid_Field__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bid_Field__c</fullName>
    <inlineHelpText>Internal use - It stores the API name of the particular field within the &quot;Assets in Deal&quot; object that is used when collecting the bid matrix &amp; summary for this project. The default field for each deal type is in configuration, but users can change it.</inlineHelpText>
    <label>Bid Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>