force-app/main/default/objects/leaseworks__Project__c/fields/leaseworks__Campaign_Marketing_Rep__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Campaign_Marketing_Rep__c</fullName>
    <label>Campaign Marketing Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Marketing_Rep_Global</valueSetName>
    </valueSet>
</CustomField>