force-app/main/default/objects/leaseworks__Project__c/fields/leaseworks__Campaign_Marketing_Representative_User__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Campaign_Marketing_Representative_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MarketingRep</relationshipName>
    <type>Lookup</type>
</CustomField>