force-app/main/default/objects/leaseworks__Project__c/fields/leaseworks__Economic_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Economic_Closing_Date__c</fullName>
    <label>Economic Closing Date</label>
    <type>Date</type>
</CustomField>