force-app/main/default/objects/leaseworks__Project__c/fields/leaseworks__Inactive__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When a Campaign is activated/deactivated, all Deals in the Campaign are automatically flagged accordingly.</inlineHelpText>
    <label>Inactive?</label>
    <type>Checkbox</type>
</CustomField>