force-app/main/default/objects/leaseworks__Project__c/fields/leaseworks__Number_Of_Assets__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Number_Of_Assets__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total number of assets in this Campaign.</inlineHelpText>
    <label>Number Of Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>