force-app/main/default/objects/leaseworks__Project__c/fields/leaseworks__Project_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Project_Deal_Type__c</fullName>
    <inlineHelpText>Once a Campaign is created, the Deal Type cannot be changed.</inlineHelpText>
    <label>Deal Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>