force-app/main/default/objects/leaseworks__Project__c/validationRules/leaseworks__End_Date_Cannot_Be_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__End_Date_Cannot_Be_Before_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__End_Date__c &lt;  leaseworks__Start_Date__c</errorConditionFormula>
    <errorDisplayField>leaseworks__End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be before the Start Date</errorMessage>
</ValidationRule>