force-app/main/default/objects/leaseworks__Project__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Project_Deal_Type__c</columns>
    <columns>leaseworks__Project_Status__c</columns>
    <columns>leaseworks__Inactive__c</columns>
    <columns>leaseworks__Number_Of_Prospects__c</columns>
    <columns>leaseworks__Number_Of_Assets__c</columns>
    <columns>leaseworks__Campaign_Marketing_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>